k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: notes-api.duckdns.org
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
